kubernetes-labs/lab-24-istio-blue-green/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-24-bluegreen
  labels:
    istio-injection: enabled
